# infinite-wiki

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  fly.toml  pyproject.toml  requirements.txt  run_app.bat  run_app.sh
.github/workflows/: docker-build.yml  static-deploy.yml
app/: config.py  database.py  main.py
app/core/: generator.py  graph.py  image_gen.py  linker.py  llm.py  magic.py  rag.py  timeline.py  validator.py  world.py
app/models/: article.py
app/templates/: article.html  article_edit.html  base.html  index.html  visualizers.html  world_create.html  world_overview.html
scripts/: docker_entrypoint.sh  download_models.py  export_static.py  seed_wiki.py
static_site/: index.html
static_site/world/Eternal-Library-Realms/: index.html
static_site/world/modern-urban-horror/: index.html
tests/: reproduce_linker.py  verify_auth.py  verify_backward_compatibility.py  verify_config.py  verify_custom_creation.py  verify_deduplication.py  verify_edit.py  verify_graph_fixes.py  verify_image_toggle.py  verify_persistence.py  verify_red_links.py  verify_seed_description.py  verify_selection_flow.py  verify_self_correction.py  verify_system.py  verify_timeline.py  verify_timeline_config.py  verify_v2.py  verify_v3.py  verify_v4.py
worlds/Eternal-Library-Realms/: config.json  database.db  wiki_graph.json
worlds/modern-urban-horror/: config.json  database.db  wiki_graph.json
worlds/ruhr-neon-depths/: config.json  database.db  wiki_graph.json
worlds/urban-psychosis/: config.json  database.db  wiki_graph.json
(+39 files in other folders)
